# elm-interface-to-json

./: README.md  elm-interface-to-json.cabal  index.js  install.js  package.json  stack.yaml
binaries/: elm-interface-to-json
src/: ElmPackageInfo.hs  Errors.hs  InterfaceDecoder.hs  Main.hs  OptionParser.hs
test/: Main.elm
test/Foo/: Bar.elm
